--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body class="body">
     <h1 class="bob">Мой досуг!</h1>
-    <h3 class="I">Ща немного о бо мне! Меня зовут Борислав. Мне 11 лет. Увлекаюсь ютубом и айти, это если про професии, а так футбол, баскет, лего, котами и тхеквондо!</h3>
+    <article class="I">Ща немного о бо мне! Меня зовут Борислав. Мне 11 лет. Увлекаюсь ютубом и айти, это если про професии, а так футбол, баскет, лего, котами и тхеквондо!</article>
     <h3 class="I">А эт я.</h3>
-    <img class="II"  src="bublik.jpg" alt="I">
+    <img class="II  "  src="bublik.jpg" alt="I">
     
     <b class="bob">
         <p>Мой досуг на выходных!</p>
@@ -24,17 +24,83 @@
     </b>
     <main class="section">
         <b>
-            <section>Утричком позанимался спортом</section>
-            <section>Зделал блинчики</section>
-            <section>Поиграл с котиками</section>
-            <section>Позанимался софт/тех</section>
-            <section>Пообедал</section>
-            <section>Поиграл с котами.</section>
-            <section>Поиграл в телефон</section>
-            <section>Поужанал</section>
-            <section>Сыграл с папой в футбик</section>
-            <section>И спать</section>
+            <ol>
+                <li>
+                    <section>
+                        <h2>08.00 - 08.15</h2>
+                        <p>Утричком позанимался спортом</p>
+                    </section>
+                </li>
+                <li>
+                    <section>
+                        <h2>08.40 - 09.20</h2>
+                        <p>Зделал блинчики</p>
+                    </section>
+                </li>
+                <li>
+                    <section>
+                        <h2>всегда по разному</h2>
+                        <p>Поиграл с котиками</p>
+                    </section>
+                </li>
+                <li>
+                    <section>
+                        <h2>11.00 - 12.00</h2>
+                        <p>Позанимался софт/тех</p>
+                    </section>
+                </li>
+                <li>
+                    <section>
+                        <h2>12.30 - 12.45</h2>
+                        <p>Пообедал</p>
+                    </section>
+                </li>
+                <li>
+                    <section>
+                        <h2>всегда по разному</h2>
+                        <p>Поиграл с котами.</p>
+                    </section>
+                </li>
+                <li>
+                    <section>
+                        <h2>13.00 - 17.30</h2>
+                        <p>Поиграл в телефон</p>
+                    </section>
+                </li>
+                <li>
+                    <section>
+                        <h2>18.00 - 18.30</h2>
+                        <p>Поужанал</p>
+                    </section>
+                </li>
+                <li>
+                    <section>
+                        <h2>19.00</h2>
+                        <p>Сыграл с папой в футбик</p>
+                    </section>
+                </li>
+                <li>
+                    <section>
+                        <h2>22.30</h2>
+                        <p>И спать</p>
+                    </section>
+                </li>
+            </ol>
         </b>
     </main>
+
+    <ul>
+        <li>
+            <a href="https://custom-cursor.com/en">выбрать курсор</a>
+        </li>
+
+        <li>
+            <a href="https://www.youtube.com/">ютуб</a>
+        </li>
+
+        <li>
+            <a href="https://rozetka.com.ua/">Rozetka</a>
+        </li>
+    </ul>
 </body>
 </html>
