--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
 
     <ul>
         <li>
-            <a href="https://custom-cursor.com/en">выбрать курсор</a>
+            <a href="https://custom-cursor.com/en" target="_blank">выбрать курсор</a>
         </li>
 
         <li>
-            <a href="https://www.youtube.com/">ютуб</a>
+            <a href="https://www.youtube.com/" target="_blank">ютуб</a>
         </li>
 
         <li>
-            <a href="https://rozetka.com.ua/">Rozetka</a>
+            <a href="https://rozetka.com.ua/" target="_blank">Rozetka</a>
         </li>
     </ul>
 </body>
